--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+.DS_Store
 # VSCode
+settings.json
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
 *.code-workspace
 
 # Byte-compiled / optimized / DLL files
