--- a/training/seaweed-comtrol/package.json
+++ b/training/seaweed-comtrol/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "hycom-test",
-    "description": "Test application for Tomlin Hycom data analysis.",
+    "name": "seaweed-control",
+    "description": "Control algorithms for navigating floating seaweed farms on the open ocean.",
     "author": "DTI DevOps",
     "dependencies": ["standardDependencies"]
   }
